@@ -1,5 +1,10 @@
 2001-03-23  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&read_am_file, &file_contents): Avoid name clashes
+	on $cond.
+
+2001-03-23  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&variable_conditionally_defined): Rename as...
 	(&check_variable_unconditionally_defined): this.
 	(&variable_dump): Fix the output.
